Text: title, table of contents, bibliography

--- a/text/0-title.tex
+++ b/text/0-title.tex
@@ -1,12 +1,4 @@
-\documentclass[a4paper]{article}
-\usepackage[12pt]{extsizes}
-\usepackage[utf8]{inputenc}
-\usepackage[T2A]{fontenc}
-\usepackage[english, russian]{babel}
-\usepackage{setspace,amsmath}
-\usepackage[left=30mm, top=20mm, right=20mm, bottom=20mm, nohead, footskip=10mm]{geometry} % настройки полей документа
-
-\begin{document} % начало документа
+\begin{titlepage} % начало документа
 	
 	% НАЧАЛО ТИТУЛЬНОГО ЛИСТА
 	\begin{center}
@@ -69,4 +61,4 @@
 	
 	% КОНЕЦ ТИТУЛЬНОГО ЛИСТА
 
-\end{document}  % КОНЕЦ ДОКУМЕНТА !
+\end{titlepage}  % КОНЕЦ ДОКУМЕНТА !
