New sand dataset generated + file structure changes

--- a/code/genetaror-sand.ipynb
+++ b/code/genetaror-sand.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -102,18 +102,18 @@
     "    # суперсэмплинг с антиалиасингом\n",
     "    imagePan = imagePan.resize((Wpan, H), Image.ANTIALIAS)\n",
     "    fileName = \"sample\" + str(i) + \".jpg\"\n",
-    "    imagePan.save(\"../data/sand/panorama/\" + fileName)\n",
+    "    imagePan.save(\"../data/sand/full_dataset/trend1/panorama/\" + fileName)\n",
     "    \n",
     "    imageSide1 = imagePan.crop((0, 0, W, H))\n",
-    "    imageSide1.save(\"../data/sand/side1/\" + fileName)\n",
+    "    imageSide1.save(\"../data/sand/full_dataset/trend1/side1/\" + fileName)\n",
     "    \n",
     "    imageSide2 = imagePan.crop((Wpan - W, 0, Wpan, H))\n",
-    "    imageSide2.save(\"../data/sand/side2/\" + fileName)"
+    "    imageSide2.save(\"../data/sand/full_dataset/trend1/side2/\" + fileName)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,12 +122,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5000/5000 [13:10<00:00,  6.55it/s]\n"
+      "100%|██████████| 1000/1000 [02:47<00:00,  5.95it/s]\n"
      ]
     }
    ],
    "source": [
-    "for i in tqdm(range(5000)):\n",
+    "# количество сэмплов для генерации\n",
+    "N = 1000\n",
+    "for i in tqdm(range(N)):\n",
     "    genSamplePanorama(W, Wpan, H, K, R0, i)"
    ]
   },
