Preparing to night training + some cosmetic fixes

--- a/code/genetaror-sand.ipynb
+++ b/code/genetaror-sand.ipynb
@@ -141,12 +141,10 @@
     "# train/validation = 80/20\n",
     "N_train = int(0.8 * N)\n",
     "N_val = N - N_train\n",
-    "print('Generating train dataset:')\n",
-    "for i in tnrange(N_train):\n",
+    "for i in tnrange(N_train, desc='Generating train dataset:'):\n",
     "    genSamplePanorama(W, Wpan, H, K, R0, i)\n",
     "\n",
-    "print('Generating validation dataset:')\n",
-    "for i in tnrange(N_val):\n",
+    "for i in tnrange(N_val, desc='Generating validation dataset:'):\n",
     "    genSamplePanorama(W, Wpan, H, K, R0, i, val=True)"
    ]
   },
@@ -188,26 +186,7 @@
    "targetLang": "fr",
    "useGoogleTranslate": true
   },
-  "notify_time": "30",
-  "widgets": {
-   "state": {
-    "6ccf654c91e54ba9abccb9692592a7c4": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    },
-    "d4b530a1ee00479280ba9e707d4b1922": {
-     "views": [
-      {
-       "cell_index": 8
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
-  }
+  "notify_time": "30"
  },
  "nbformat": 4,
  "nbformat_minor": 2
