--- a/code/sand_gan.ipynb
+++ b/code/sand_gan.ipynb
@@ -66,14 +66,14 @@
    "outputs": [],
    "source": [
     "# U-Net Generator\n",
-    "def g_unet(nf, model_name, in_ch=1, out_ch=1, batch_size=1, alpha=0.2):\n",
+    "def g_unet(nf, i, in_ch=1, out_ch=1, batch_size=1, alpha=0.2):\n",
     "    ''' параметры:\n",
     "    input shape = (100, 100, in_ch)\n",
     "    output = (100, 250, out_ch)\n",
     "    nf - число фильтров на входном слое\n",
     "    alpha - параметр LeakyReLU\n",
     "    '''\n",
-    "    i = Input(shape=(100, 100, in_ch))\n",
+    "    #i = Input(shape=(100, 100, in_ch))\n",
     "    # (100, 100, in_ch)\n",
     "    \n",
     "    conv1 = Conv2D(nf, (6, 6), padding='same', strides=(5, 5))(i)\n",
@@ -122,9 +122,9 @@
     "    # (250, 100, out_ch)\n",
     "\n",
     "    out = Activation('tanh')(dconv4)\n",
-    "    unet = Model(i, out, name=model_name)\n",
+    "    #unet = Model(i, out, name=model_name)\n",
     "    \n",
-    "    return unet"
+    "    return out"
    ]
   },
   {
@@ -189,10 +189,10 @@
     "def full_generator(nf, in_ch=1, out_ch=1, batch_size=1, alpha=0.2, model_name='f_gen'):\n",
     "    a1 = Input(shape=(100, 100, in_ch))\n",
     "    a2 = Input(shape=(100, 100, in_ch))\n",
-    "    gen1 = g_unet(nf, 'unet1', in_ch, out_ch, batch_size, alpha)\n",
-    "    out1 = gen1(a1)\n",
-    "    gen2 = g_unet(nf, 'unet2', in_ch, out_ch, batch_size, alpha)\n",
-    "    out2 = gen2(a2)\n",
+    "    out1 = g_unet(nf, a1, in_ch, out_ch, batch_size, alpha)\n",
+    "    #out1 = gen1(a1)\n",
+    "    out2 = g_unet(nf, a2, in_ch, out_ch, batch_size, alpha)\n",
+    "    #out2 = gen2(a2)\n",
     "    out = concatenate([out1, out2], axis=1)\n",
     "    f_gen = Model([a1, a2], out, name=model_name)\n",
     "    return f_gen"
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -938,6 +938,149 @@
    ],
    "source": [
     "pydot.find_graphviz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "input_1 (InputLayer)             (None, 100, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "input_2 (InputLayer)             (None, 100, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_1 (Conv2D)                (None, 20, 20, 5)     185                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_5 (Conv2D)                (None, 20, 20, 5)     185                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_1 (BatchNorm (None, 20, 20, 5)     20                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_8 (BatchNorm (None, 20, 20, 5)     20                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_1 (LeakyReLU)        (None, 20, 20, 5)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_8 (LeakyReLU)        (None, 20, 20, 5)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_2 (Conv2D)                (None, 4, 4, 25)      4525                                         \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_6 (Conv2D)                (None, 4, 4, 25)      4525                                         \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_2 (BatchNorm (None, 4, 4, 25)      100                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_9 (BatchNorm (None, 4, 4, 25)      100                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_2 (LeakyReLU)        (None, 4, 4, 25)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_9 (LeakyReLU)        (None, 4, 4, 25)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_3 (Conv2D)                (None, 2, 2, 50)      11300                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_7 (Conv2D)                (None, 2, 2, 50)      11300                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_3 (BatchNorm (None, 2, 2, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_10 (BatchNor (None, 2, 2, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_3 (LeakyReLU)        (None, 2, 2, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_10 (LeakyReLU)       (None, 2, 2, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_4 (Conv2D)                (None, 1, 1, 50)      10050                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_8 (Conv2D)                (None, 1, 1, 50)      10050                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_4 (BatchNorm (None, 1, 1, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_11 (BatchNor (None, 1, 1, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_4 (LeakyReLU)        (None, 1, 1, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_11 (LeakyReLU)       (None, 1, 1, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_1 (Conv2DTransp (None, 2, 2, 50)      10050                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_5 (Conv2DTransp (None, 2, 2, 50)      10050                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_5 (BatchNorm (None, 2, 2, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_12 (BatchNor (None, 2, 2, 50)      200                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_1 (Dropout)              (None, 2, 2, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_2 (Dropout)              (None, 2, 2, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)      (None, 2, 2, 100)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_4 (Concatenate)      (None, 2, 2, 100)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_5 (LeakyReLU)        (None, 2, 2, 100)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_12 (LeakyReLU)       (None, 2, 2, 100)     0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_2 (Conv2DTransp (None, 4, 4, 25)      10025                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_6 (Conv2DTransp (None, 4, 4, 25)      10025                                        \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_6 (BatchNorm (None, 4, 4, 25)      100                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_13 (BatchNor (None, 4, 4, 25)      100                                          \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_2 (Concatenate)      (None, 4, 4, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_5 (Concatenate)      (None, 4, 4, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_6 (LeakyReLU)        (None, 4, 4, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_13 (LeakyReLU)       (None, 4, 4, 50)      0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_3 (Conv2DTransp (None, 20, 20, 5)     1005                                         \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_7 (Conv2DTransp (None, 20, 20, 5)     1005                                         \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_7 (BatchNorm (None, 20, 20, 5)     20                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "batch_normalization_14 (BatchNor (None, 20, 20, 5)     20                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_3 (Concatenate)      (None, 20, 20, 10)    0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_6 (Concatenate)      (None, 20, 20, 10)    0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_7 (LeakyReLU)        (None, 20, 20, 10)    0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "leaky_re_lu_14 (LeakyReLU)       (None, 20, 20, 10)    0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_4 (Conv2DTransp (None, 260, 100, 1)   41                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "conv2d_transpose_8 (Conv2DTransp (None, 260, 100, 1)   41                                           \n",
+      "____________________________________________________________________________________________________\n",
+      "cropping2d_1 (Cropping2D)        (None, 250, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "cropping2d_2 (Cropping2D)        (None, 250, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_1 (Activation)        (None, 250, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_2 (Activation)        (None, 250, 100, 1)   0                                            \n",
+      "____________________________________________________________________________________________________\n",
+      "concatenate_7 (Concatenate)      (None, 500, 100, 1)   0                                            \n",
+      "====================================================================================================\n",
+      "Total params: 96,042.0\n",
+      "Trainable params: 95,202.0\n",
+      "Non-trainable params: 840.0\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_gen.summary()"
    ]
   },
   {
