--- a/text/Предзащита/prejudice.tex
+++ b/text/Предзащита/prejudice.tex
@@ -32,11 +32,11 @@
 
 \begin{frame}\frametitle{Введение}
 	Задача состоит в построении и обучении искусственной нейронной сети, которая будет способна синтезировать текстуры с трендом.
-	В качестве тренда в текстуре подразумевается какое-то заданное изменение статистических свойств изображения, подчиненное некоторой функциональной зависимости. В качестве таких свойств могут выступать, например, интенсивность появления частиц, пористость среды, и т.п.
+	В качестве тренда в текстуре подразумевается какое-то заданное изменение статистических свойств изображения, подчиненное некоторой функциональной зависимости. Такими свойствами могут выступать, например, интенсивность появления частиц, пористость среды, и т.п.
 \end{frame}
 
 \begin{frame}\frametitle{Постановка задачи} 
-	Поскольку задача достаточно общая, в работе рассматривается ее сужение:
+	Поскольку задача достаточно общая, в работе рассматривается частный случай со следующими ограничениями:
 	\begin{itemize}
 		\item В качестве статистического свойства рассматривается интенсивность появления частиц $\lambda$
 		\item Тренд направлен вдоль оси x (горизонтальный тренд)
