Trained nf16_woUnet

--- a/code/sand_gan.ipynb
+++ b/code/sand_gan.ipynb
@@ -132,44 +132,51 @@
     "    dconv1 = Conv2DTranspose(nf*8, (2, 2), strides=(1, 1))(x)\n",
     "    dconv1 = BatchNormalization(axis=3)(dconv1)\n",
     "    dconv1 = Dropout(0.5)(dconv1)\n",
-    "    x = concatenate([dconv1, conv7], axis=3)\n",
+    "    #x = concatenate([dconv1, conv7], axis=3)\n",
+    "    x = dconv1\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (2, 2, nf*(8 + 8))\n",
     "\n",
     "    dconv2 = Conv2DTranspose(nf*8, (2, 2), strides=(2, 2))(x)\n",
     "    dconv2 = BatchNormalization(axis=3)(dconv2)\n",
     "    dconv2 = Dropout(0.5)(dconv2)\n",
-    "    x = concatenate([dconv2, conv6], axis=3)\n",
+    "    #x = concatenate([dconv2, conv6], axis=3)\n",
+    "    x = dconv2\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (4, 4, nf*(8 + 8))\n",
     "\n",
     "    dconv3 = Conv2DTranspose(nf*8, (2, 2), strides=(2, 2))(x)\n",
     "    dconv3 = BatchNormalization(axis=3)(dconv3)\n",
-    "    x = concatenate([dconv3, conv5], axis=3)\n",
+    "    #x = concatenate([dconv3, conv5], axis=3)\n",
+    "    x = dconv3\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (8, 8, nf*(8 + 8))\n",
     "    \n",
     "    dconv4 = Conv2DTranspose(nf*8, (2, 2), strides=(2, 2))(x)\n",
     "    dconv4 = BatchNormalization(axis=3)(dconv4)\n",
-    "    x = concatenate([dconv4, conv4], axis=3)\n",
+    "    #x = concatenate([dconv4, conv4], axis=3)\n",
+    "    x = dconv4\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (16, 16, nf*(8 + 8))\n",
     "    \n",
     "    dconv5 = Conv2DTranspose(nf*4, (2, 2), strides=(2, 2))(x)\n",
     "    dconv5 = BatchNormalization(axis=3)(dconv5)\n",
-    "    x = concatenate([dconv5, conv3], axis=3)\n",
+    "    #x = concatenate([dconv5, conv3], axis=3)\n",
+    "    x = dconv5\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (32, 32, nf*(4 + 4))\n",
     "    \n",
     "    dconv6 = Conv2DTranspose(nf*2, (2, 2), strides=(2, 2))(x)\n",
     "    dconv6 = BatchNormalization(axis=3)(dconv6)\n",
-    "    x = concatenate([dconv6, conv2], axis=3)\n",
+    "    #x = concatenate([dconv6, conv2], axis=3)\n",
+    "    x = dconv6\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (64, 64, nf*(2 + 2))\n",
     "    \n",
     "    dconv7 = Conv2DTranspose(nf, (2, 2), strides=(2, 2))(x)\n",
     "    dconv7 = BatchNormalization(axis=3)(dconv7)\n",
-    "    x = concatenate([dconv7, conv1], axis=3)\n",
+    "    #x = concatenate([dconv7, conv1], axis=3)\n",
+    "    x = dconv7\n",
     "    x = LeakyReLU(alpha)(x)\n",
     "    # (128, 128, nf*(1 + 1))\n",
     "\n",
@@ -341,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c87c565ed74e43948d7d41b404f80f25"
+       "model_id": "f9c2eaaa14014cc0b33fd1316953cd86"
       }
      },
      "metadata": {},
@@ -386,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03935608f51440d599da857365510068"
+       "model_id": "9c0f8d65c46e44aaad0fd06a5c28e210"
       }
      },
      "metadata": {},
@@ -629,10 +636,10 @@
    "outputs": [],
    "source": [
     "def save_models(f_gen, d, p2p, losses):\n",
-    "    f_gen.save_weights('trained_models/trend2/nf32/f_gen.weights')\n",
-    "    d.save_weights('trained_models/trend2/nf32/d.weights')\n",
-    "    p2p.save_weights('trained_models/trend2/nf32/p2p.weights')\n",
-    "    np.save('trained_models/trend2/nf32/losses.npy', losses)\n",
+    "    f_gen.save_weights('trained_models/trend2/nf16_woUnet/f_gen.weights')\n",
+    "    d.save_weights('trained_models/trend2/nf16_woUnet/d.weights')\n",
+    "    p2p.save_weights('trained_models/trend2/nf16_woUnet/p2p.weights')\n",
+    "    np.save('trained_models/trend2/nf16_woUnet/losses.npy', losses)\n",
     "    print('Models saved successfully.')"
    ]
   },
@@ -647,9 +654,9 @@
    "outputs": [],
    "source": [
     "def plot_models(f_gen, d, p2p):\n",
-    "    plot_model(f_gen, to_file='trained_models/trend2/nf32/f_gen.png', show_shapes=True, show_layer_names=True)\n",
-    "    plot_model(d, to_file='trained_models/trend2/nf32/d.png', show_shapes=True, show_layer_names=True)\n",
-    "    plot_model(p2p, to_file='trained_models/trend2/nf32/p2p.png', show_shapes=True, show_layer_names=True)"
+    "    plot_model(f_gen, to_file='trained_models/trend2/nf16_woUnet/f_gen.png', show_shapes=True, show_layer_names=True)\n",
+    "    plot_model(d, to_file='trained_models/trend2/nf16_woUnet/d.png', show_shapes=True, show_layer_names=True)\n",
+    "    plot_model(p2p, to_file='trained_models/trend2/nf16_woUnet/p2p.png', show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -663,7 +670,7 @@
    "outputs": [],
    "source": [
     "# создание моделей\n",
-    "nf = 32\n",
+    "nf = 16\n",
     "f_gen = g_unet(nf)\n",
     "d = discriminator(nf)\n",
     "p2p = pix2pix(f_gen, d)\n",
@@ -678,10 +685,154 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1df29f68946d4692b78e619bf14d1473"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57cb46abbaca4dce9eeb996d1c0bf5ba"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8015ce1b09ad45d0af3d91ad91cf48fc"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbb0ba95b45c44d59e19ad3910931bf6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d61d073aa7f34f7793bab4f953898e75"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70e01cde34014502bbb60538e4973021"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34fc10c9fa0a4d3e8d6cd830efc73cec"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b708539d0424420bafec4adff45c89e7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3dc7be2ee0ce41a1a288fb0bd61566d3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "facda023ce7148e9ac958aad009f68d5"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c9dbbad3298d4d11a38a724f76054dc2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bbcbef5931cb4c27870c18e08ca285d2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e9c6cdefbde4e27ac57b6f788695501"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb6a39485ed24819b41cc092d1c8d68b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "efb38513a48442338be1cc2d81506ca0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Models saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# обучение\n",
-    "losses = train(f_gen, d, p2p, trainGen, valGen, epochs=20, trainSamples=N_train, samplesPerBatch=50)\n",
+    "losses = train(f_gen, d, p2p, trainGen, valGen, epochs=15, trainSamples=N_train, samplesPerBatch=50)\n",
     "save_models(f_gen, d, p2p, losses)"
    ]
   },
@@ -693,6 +844,22 @@
    },
    "source": [
     "### Trained NN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def load_trained_model(d, f_gen, p2p):\n",
+    "    d.load_weights('trained_models/trend2/nf16_woUnet/d.weights')\n",
+    "    f_gen.load_weights('trained_models/trend2/nf16_woUnet/f_gen.weights')\n",
+    "    p2p.load_weights('trained_models/trend2/nf16_woUnet/p2p.weights')\n",
+    "    losses = np.load('trained_models/trend2/nf16_woUnet/losses.npy', losses)\n",
+    "    return losses"
    ]
   },
   {
@@ -710,13 +877,13 @@
     "    plt.plot(losses['d'], label='d')\n",
     "    plt.plot(losses['p2p'], label='p2p')\n",
     "    plt.legend()\n",
-    "    plt.savefig('trained_models/trend2/nf32/loss_train.png')\n",
+    "    plt.savefig('trained_models/trend2/nf16_woUnet/loss_train.png')\n",
     "    \n",
     "    plt.figure(figsize=(10,5))\n",
     "    plt.plot(losses['dVal'], label='dVal')\n",
     "    plt.plot(losses['p2pVal'], label='p2pVal')\n",
     "    plt.legend()\n",
-    "    plt.savefig('trained_models/trend2/nf32/loss_val.png')"
+    "    plt.savefig('trained_models/trend2/nf16_woUnet/loss_val.png')"
    ]
   },
   {
@@ -747,9 +914,20 @@
     "        panImages.append(Image.fromarray(currPanIm, mode='L'))\n",
     "        genImages.append(Image.fromarray(currGenIm, mode='L'))\n",
     "        fileName = 'sample' + str(i) + '.jpg'\n",
-    "        genImages[i].save('trained_models/trend2/nf32/nn_output/' + fileName)\n",
+    "        genImages[i].save('trained_models/trend2/nf16_woUnet/nn_output/' + fileName)\n",
     "    print('NN output saved successfully.')\n",
     "    return side1Images, side2Images, panImages, genImages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "losses = load_trained_model(d, f_gen, p2p)"
    ]
   },
   {
@@ -861,7 +1039,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
