TR_MSE metrics over trend3 - 2

--- a/code/sand_gan.ipynb
+++ b/code/sand_gan.ipynb
@@ -415,6 +415,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save('../data/sand/trend3/metrics/tmse.npy', tmse)\n",
+    "np.save('../data/sand/trend3/metrics/vmse.npy', vmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
