Presentation & text wo results

--- a/text/Universiade/presentation.tex
+++ b/text/Universiade/presentation.tex
@@ -39,7 +39,7 @@
 \end{frame}
 
 \begin{frame}\frametitle{Математическая постановка}
-	С математической точки зрения, задача сводится к синтезу случайного изображения $X'$ (и построению соотвествующей процедуры синтеза), имеющего распределение, близкое к желаемому:
+	С математической точки зрения, задача сводится к синтезу случайного изображения $X'$ (и построению соотвествующей процедуры синтеза), принадлежащему распределению, близкому к желаемому:
 	$$ P_{X'} \approx P_X,$$
 	где $P_X$ - распределение изображений с трендами, удовлетворяющих следующим ограничениям (для упрощения задачи):
 	\begin{itemize}
@@ -48,13 +48,14 @@
 		\item Тренд является линейным и направлен вдоль оси x: 
 		$ \lambda = \lambda_0 + kx $
 	\end{itemize}
+	Распределение $P_X$ задается обучающей выборкой.
 \end{frame}
 
-\begin{frame}\frametitle{Подходы к решению задачи}
-	Существует несколько подходов к решению задач подобного рода:
+\begin{frame}\frametitle{Существующие подходы к решению задачи}
+	Есть несколько подходов к решению задач подобного рода:
 	\begin{itemize}
 		\item 'Классический' статистический подход
-		\item Первый нейросетевой подход
+		\item Базовый нейросетевой подход
 		\item Генеративные состязательные сети (GAN)
 	\end{itemize}
 \end{frame}
@@ -75,7 +76,7 @@
 	Простой пример - генерирование человеческих лиц, похожих на реальные: параметрической модели для такой задачи не существует.
 \end{frame}
 
-\begin{frame}\frametitle{Первый нейросетевой подход}
+\begin{frame}\frametitle{Базовый нейросетевой подход}
 	\begin{itemize}
 		\item Вводится параметризированное семейство распределений вероятности $P_{\theta}(x)$
 		\begin{itemize}
@@ -117,7 +118,7 @@
 		\item Введем две нейросети:
 		\begin{itemize}
 			\item $d_{\zeta}(x)$ - классификатор для измерения расстояния, \textbf{дискриминатор}
-			\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $x$, \textbf{генератор}
+			\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $X'$, \textbf{генератор}
 		\end{itemize}
 		\item Введем loss-функцию дискриминатора(например, кросс-энтропия):
 		$$ L(X, X') = \frac{1}{2} \mathbb{E}_{x \sim X} l(d_{\zeta}(x), 1) + \frac{1}{2} \mathbb{E}_{x' \sim X'} l(d_{\zeta}(x'), 0) = $$
@@ -151,18 +152,47 @@
 					\item Повторяем много раз
 				\end{itemize}
 			\end{center}
-			Схематически процесс обучения изображен на иллюстрации справа
 		\column{0.5\linewidth}
-			\centering{\includegraphics[width=0.8\linewidth]{gan-training}}
+			\begin{figure}
+				\centering{\includegraphics[width=0.8\linewidth]{gan-training}}
+				\caption{Схематическое изображение процесса обучения GAN}
+			\end{figure}
 	\end{columns}
-	
+\end{frame}
+
+\begin{frame}\frametitle{pix2pix GAN}
+	Для решения задачи было попробовано применить модификацию GAN-сети под названием "pix2pix GAN". Для нее функционал потерь выглядит следующим образом: $$ \mathcal{L}(G, D) = \mathcal{L}_{adv}(G, D) + \eta \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)} (\parallel r - G(s_1, s_2) \parallel_1)$$
+	$$ \mathcal{L}_{adv}(G, D) = \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}\log D(s_1, s_2, r) + $$ $$ + \mathbb{E}_{s_1, s_2 \sim p_{data}(s_1, s_2)} \log (1 - D(s_1, s_2, G(s_1, s_2)))$$
+	где G, D - генератор и дискриминатор, $(s_1, s_2, r)$ - тройка изображений (интенсивность слева, справа и реальное изображение с трендом),  $\mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}$ - мат. ожидание логарифмического правдоподобия того, что тройка изображений $(s_1, s_2, r)$ принадлежит вероятностному распределению реальных троек $p_{data}(s_1, s_2, r)$, а $p_{data}(s_1, s_2)$ соответствует распределению реальных изображений $s_1, s_2$. \\
+	\begin{figure}
+		\centering{\includegraphics[width=0.6\linewidth]{p2p-gen}}
+		\caption{Вход и желаемый выход нейросети}
+	\end{figure}
 \end{frame}
 
 \begin{frame}\frametitle{Критерий качества}
-	
+	После обучения генератора, необходимо проверить, что сгенерированные им изображения действительно имеют искомые характеристики. Для этого нужно ввести специальную метрику, которая будет учитывать наличие в изображении тренда интенсивности частиц. Было решено использовать среднюю плотность черных пикселей в некотором окне, и проходить этим окном по изображению:
+	\begin{columns}
+		\column{0.5\linewidth}
+			\begin{center}
+				$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{255}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w + 1} $$
+			\end{center}
+			Построив график $\xi(k)$ можно увидеть, как меняется плотность пикселей и прослеживается ли тренд. В качестве метрики можно взять среднеквадратичную ошибку:
+		\column{0.4\linewidth}
+			\begin{figure}
+				\centering{\includegraphics[width=0.9\linewidth]{metrics} }
+			\end{figure}
+	\end{columns}
+	\begin{columns}
+		\column{0.5\linewidth}
+			$$ \xi = \frac{1}{W-w}\sum_{k=1}^{W-w+1} (\xi_k - \xi_{0k})^2,$$
+		\column{0.5\linewidth}
+			где $\xi_{ok}$ - $\xi_k$, усредненное по примерам из обучающей выборки
+	\end{columns}
 \end{frame}
 
 \begin{frame}\frametitle{Результаты, графики}
+	
 \end{frame}
 
 \begin{frame}\frametitle{Графики-2}
