--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -2,6 +2,8 @@
 \usepackage[12pt]{extsizes}
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
+\usepackage{amssymb,amsmath,mathtext}
+\usepackage{indentfirst,amsfonts}
 \usepackage[english, russian]{babel}
 \usepackage{setspace,amsmath}
 \usepackage[dvips]{graphicx}
